test/core/errors/identifiers_error/zs/clashing_identifiers/clashing_structure_field_and_param_names_error.zs
package clashing_identifiers.clashing_structure_field_and_param_names_error;

struct Structure(uint8 Value)
{
    uint8 value;
    string description;
};
